test/error/rtc/rtc2.rzy
// error: loop in connection graph for sub

component
  Dummy
    input
      in();
      
    output
      out();
      
  implementation elementary
    function in()
      out();
    end
  end

  Rtc2
    input
      in();
      
    output
      out();
      
  implementation elementary
    component
      sub1 : Dummy;
      sub2 : Dummy;
      
    function in()
      out();   //surpress errors or warnings about unused stuff
    end
    
    function sub1.out()
      sub2.in();
    end

    function sub2.out()
      sub1.in();
    end
    
  end

